manifests/canfar.net/ades/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ades
  namespace: canfar-system-production
  labels:
    app.kubernetes.io/name: ades
    app.kubernetes.io/component: validator-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ades
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
